Fix patching whiteboard.yaml.
Signed-off-by: Kurt Garloff <kurt@garloff.de>

--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -454,7 +454,7 @@ resources:
                   cp -p env.example ~/.env
                   cd ..
                   sed -i 's@etherpad/etherpad:1.8.6@etherpad/etherpad:latest@' etherpad.yml
-                  sed -i 's@jitsi/excalidraw-backend:latest@jitsi/excalidraw-backend:21@' excalidraw-backend.yml
+                  sed -i 's@jitsi/excalidraw-backend:latest@jitsi/excalidraw-backend:21@' whiteboard.yml
                   for nm in *.yml; do sed -i 's@^\( *image: jitsi/[^:]*\):.*$@\1:latest@g' $nm; done
                   chmod 0600 .env
                   # This is only used internally
