--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -791,7 +791,7 @@ resources:
                   if test "enable_etherpad" = "True"; then
                     DFILES="$DFILES -f ~/etherpad.yml"
                   fi
-                   if test "enable_whitepad" = "True"; then
+                   if test "enable_whiteboard" = "True"; then
                     DFILES="$DFILES -f ~/whiteboard.yml"
                   fi
                   eval docker-compose $DFILES down
