Need to set DNS early when getting letsenc cert.
This can otherwise just not succeed.

Signed-off-by: Kurt Garloff <kurt@garloff.de>

--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -601,18 +601,19 @@ resources:
                     DFILES="$DFILES -f ~/whiteboard.yml"
                   fi
                   eval docker-compose $DFILES up -d
-
+                  sleep 5; sync
                   WEBCFG=~/.jitsi-meet-cfg/web/config.js
                   WEBIFCFG=~/.jitsi-meet-cfg/web/interface_config.js
-                  # Wait up to four mins for web config (due to wait for letsenc certificate)
-                  echo -n "Waiting for $WEBCFG: "
+                  echo -n "Waiting for nginx: "
                   declare -i ctr=0
-                  while test ! -e $WEBCFG -a $ctr -le 240; do
-                    sleep 1
-                    let ctr+=1
+                  while test -z "$NGINX" -a $ctr -le 120; do
+                    NGINX=$(ps -x | grep "nginx: master" | grep -v grep | awk '{ print $1; }')
                     echo -n "."
+                    sleep 2
+                    if test $((ctr%15)) -eq 0 -o -n "$NGINX"; then echo -en "\n "; fi
+                    let ctr+=1
                   done
-                  echo
+                  ls -l $WEBCFG
                   # Only if not using LETSENCRYPT
                   if test -z "letsenc_mail"; then
                     cp -p cert.crt ~/.jitsi-meet-cfg/web/keys/cert.crt
